Dark mode + fix visualizer

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+#mainContainer {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
