--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -4,3 +4,11 @@ input[type=text] {
 .container {
     text-align: center;
 }
+
+h1, label {
+    color: white;
+}
+
+label {
+    margin-right: 20px;
+}
