--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -4,7 +4,19 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  height: 100%;
+  width: 100%;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  background-color: black;
+  height: 100%;
+}
+
+html, body, #app, #app>div {
+  height: 100%;
+  min-height: 100% 
 }
 
 code {
