--- a/client/src/css/playlist.css
+++ b/client/src/css/playlist.css
@@ -1,3 +1,9 @@
+#mainContainer {
+    background-color: black;
+    height: 100%;
+    overflow: "hidden"
+}
+
 #elapsed-container{
     width: 30%;
     height: 10px;
@@ -47,27 +53,33 @@
     overflow: scroll;
     overflow-x: hidden;
     height: 550px;
+    margin: 5px;
+    border: 2px solid whitesmoke;
+
 }
 
-.videoInPlaylist {
-    cursor: pointer; 
+p {
+    color: whitesmoke;
 }
 
 .videoEntry {
-    border-style: solid;
-    margin: 5px;
+    padding: 5px;
+    cursor: pointer; 
 }
 
-.videoInPlaylist:hover {
-    background-color: red;
+.videoEntry:hover {
+    background-color: gray;
 }
 
 #visualizerCanvas {
-    position:absolute;
-    height: 100%;
-    left:0;
-    top:0;
+    width: 100%;
+    height: 550px;
     pointer-events:none;
+}
+
+#content {
+    max-height: 600px;
+    bottom: 0;
 }
 
 button {
